<resources>
    <string name="app_name">Averroes</string>

    <string name="all_notes">All Notes</string>

    <string name="title_notes">Notes</string>
    <string name="title_todos">To-dos</string>
    <string name="title_add_note">Add Note</string>
    <string name="title_note_detail">Note Detail</string>

    <string name="hint_title">Title</string>
    <string name="btn_add_note">Add</string>

    <string name="category_travel">Travel</string>
    <string name="category_personal">Personal</string>
    <string name="category_life">Life</string>
    <string name="category_work">Work</string>
    <string name="category_no_category">No category</string>
    <string name="category_new">NEW</string>

    <string name="grid_view">Grid view</string>
    <string name="list_view">List view</string>
    <string name="delete_items">Delete items</string>
    <string name="settings">Settings</string>

    <string name="search_bar_hint">Search</string>

    <string name="number_of_notes">%1$s Notes</string>
    <string name="number_of_todos">%1$s To-dos</string>
</resources>