<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_menu"
    tools:context="com.uckmhnds.averroes.view.activities.MainActivity">

    <item
        android:onClick="popUpMenuClick"
        android:visible="true"
        android:id="@+id/popup_menu_item_grid_view"
        android:title="@string/grid_view"
        app:showAsAction="never"/>

    <item
        android:onClick="popUpMenuClick"
        android:visible="true"
        android:id="@+id/popup_menu_item_list_view"
        android:title="@string/list_view"
        app:showAsAction="never"/>

    <item
        android:onClick="popUpMenuClick"
        android:visible="true"
        android:id="@+id/popup_menu_item_delete_items"
        android:title="@string/delete_items"
        app:showAsAction="never"/>

    <item
        android:onClick="popUpMenuClick"
        android:visible="true"
        android:id="@+id/popup_menu_item_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>
