<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.uckmhnds.averroes.view.fragments.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_notes_to_note_detail"
            app:destination="@id/navigation_note_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_note_detail"
        android:name="com.uckmhnds.averroes.view.fragments.NoteDetailFragment"
        android:label="@string/title_note_detail"
        tools:layout="@layout/fragment_note_detail" >
        <action
            android:id="@+id/action_note_detail_to_notes"
            app:destination="@id/navigation_notes" />

        <argument
            android:name="noteModel"
            app:argType="com.uckmhnds.averroes.domain.model.NoteModel" />

    </fragment>

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.uckmhnds.averroes.view.fragments.TodosFragment"
        android:label="@string/title_todos"
        tools:layout="@layout/fragment_todos" />

</navigation>